[package]
name = "lockbud"
version = "0.1.0"
authors = ["BurtonQin <bobbqqin@gmail.com>"]
repository = "https://github.com/os-checker/lockbud.git"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "lockbud"
path = "src/main.rs"

[[bin]]
name = "cargo-lockbud"
path = "src/bin/cargo-lockbud.rs"

[dependencies]
cargo_metadata = { version = "0.12.1", optional = true }
directories = { version = "3.0.1", optional = true }
rustc_version = { version = "0.3.0", optional = true }
getrandom = { version = "0.2.0", features = ["std"] }
byteorder = "1.3"
env_logger = "0.8.2"
log = "0.4.11"
shell-escape = "0.1.5"
hex = "0.4.0"
rand = "0.8.0"
clap = "3.1.12"
shellwords = "1.1.0"
petgraph = "0.6.0"
bitflags = "1.3.2"
smallvec = "1.8.0"
serde_json = "1.0.81"
serde = { version = "1.0", features = ["derive"] }
regex = "1.6.0"
once_cell = "1.13.1"

[profile.dev]
incremental = false

[package.metadata.rust-analyzer]
rustc_private=true

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.22.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-unknown-linux-musl", "x86_64-pc-windows-msvc"]
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to install an updater program
install-updater = false
